--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,12 +29,16 @@ android {
     if (project.android.hasProperty("namespace")) {
         namespace 'com.cloudwebrtc.webrtc'
     }
-    compileSdkVersion 31
+    compileSdkVersion 34
+    ndkVersion '25.2.9519653'
 
     defaultConfig {
         minSdkVersion 21
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         consumerProguardFiles 'proguard-rules.pro'
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+        }
     }
 
     lintOptions {
@@ -48,6 +52,13 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    externalNativeBuild{
+        cmake{
+            version "3.31.0"
+            path "CMakeLists.txt"
+        }
     }
 }
 
