--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   ffi: ^2.0.2
   flutter:
     sdk: flutter
+  path: ^1.9.1
   path_provider: ^2.0.2
+  share_plus: ^10.1.4
   web: ^1.0.0
   webrtc_interface: ^1.2.1+hotfix.1
 
