--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   ffi: ^2.0.2
   flutter:
     sdk: flutter
+  http: ^1.3.0
   path_provider: ^2.0.2
   web: ^1.0.0
   webrtc_interface: ^1.2.1+hotfix.1
